--- a/services/api-svc/package.json
+++ b/services/api-svc/package.json
@@ -1,1 +1,8 @@
-{"name":"api-svc","version":"0.1.0","type":"module","main":"src/server.mjs","scripts":{"start":"node src/server.mjs"},"dependencies":{"axios":"^1.7.2","cors":"^2.8.5","express":"^4.19.2","kafkajs":"^2.2.4","nanoid":"^5.0.7"}}
+{"name":"api-svc","version":"0.1.0","type":"module","main":"src/server.mjs","scripts":{"start":"node src/server.mjs"},
+"dependencies":{
+    "axios":"^1.7.2","cors":"^2.8.5",
+    "express":"^4.19.2","kafkajs":"^2.2.4",
+    "nanoid":"^5.0.7",
+    "cookie-parser": "^1.4.6",
+    "jsonwebtoken": "^9.0.2"}
+}
