--- a/services/ledger-svc/package.json
+++ b/services/ledger-svc/package.json
@@ -10,6 +10,7 @@
 "express": "^4.19.2",
 "kafkajs": "^2.2.4",
 "pg": "^8.11.5",
-"nanoid": "^5.0.7"
+"nanoid": "^5.0.7",
+"bcryptjs": "^2.4.3"
 }
 }
