--- a/services/web-ui/dockerfile
+++ b/services/web-ui/dockerfile
@@ -1,8 +1,13 @@
 FROM node:20
 WORKDIR /app
 COPY package*.json ./
-RUN npm install
+RUN npm ci --omit=optional
 COPY . .
-RUN npm run build
+
+# Installiere Vite global, damit der Build nie an devDeps hängt
+RUN npm i -g vite
+RUN vite build
+
+RUN npm i -g serve
 EXPOSE 8080
-CMD ["npx", "serve", "-s", "dist", "-l", "8080"]
+CMD ["serve", "-s", "dist", "-l", "8080"]
